# stacked360depth

./: CMakeLists.txt  README.md
include/: glslloader.h  imageio.hpp
include/glad/: gl.h
resrc/shaders/: nolight_texture.frag  nolight_texture.vert
src/: main.cpp
